--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -554,18 +554,21 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
   margin-bottom: 20px;
 }
 
+.stock-header-row-1 { padding-bottom: 5px; }
+.stock-header-row-2 {}
+
 .stock-name {
-  font-size: 22px;
+  font-size: 25px;
   font-weight: bold;
 }
 
 .stock-symbol {
   font-weight: bold;
 }
-.stock-current-price {}
-.stock-currency {}
+.stock-current-price { font-size: 20px; font-weight: bold; }
+.stock-currency { font-weight: bold; }
 .stock-change
-.stock-change-price {}
+.stock-change-price {  }
 .stock-change-percent {}
 
 
