--- a/templates/markets/stocks/index_paged_content.html
+++ b/templates/markets/stocks/index_paged_content.html
@@ -1,6 +1,6 @@
 {% load endless %}
 
-<table class="table table-striped table-striped-white table-hover table-bordered table-condensed">
+<table class="table table-striped table-striped-white table-hover table-bordered table-condensed table-clickable">
   <thead>
     <tr>
       <th style="width: 70%">Name</th>
