--- a/templates/site/site_index.html
+++ b/templates/site/site_index.html
@@ -1,5 +1,7 @@
 {% extends base_template %}
 
+{% load humanize %}
+
 {% block browser_title %}Home{% endblock browser_title %}
 
 {% block page_title %}
@@ -75,23 +77,78 @@
 
 {% block sidebar %}
 
-{% if user.is_authenticated %}
+{% if user.is_authenticated %}  {# authenticated dashboard #}
 
-  <div class="widget widget-simple">
+  <div class="widget widget-stats"">
     <div class="widget-header">
-      <h3>Portfolio Performers</h3>
+      <h4><i class="icon-folder-open-alt"></i> Portfolios</h4>
     </div>
     <div class="widget-body">
-      <div id="holdings-chart" style="height: 260px;"></div>
+      {% if portfolios %}
+        {% for portfolio in portfolios %}
+          <div class="item-row">
+            <div class="item-label">
+              {{ portfolio.name }}
+            </div>
+            <div class="item-value">
+              {% if portfolio.market_value > portfolio.book_value %}
+                <span class="indicator-gain">
+              {% elif portfolio.market_value < portfolio.book_value %}
+                <span class="indicator-loss">
+              {% else %}
+                <span>
+              {% endif %}
+              ${{ portfolio.market_value|floatformat:2|intcomma }}</span>
+            </div>
+          </div>
+        {% endfor %}
+      {% else %}
+        <div class="item-row">
+          <div class="item-label">
+            No portfolios found, create one now!
+          </div>
+        </div>
+      {% endif %}
     </div>
   </div>
 
-  <div class="widget widget-simple">
+  <div class="widget widget-activity">
     <div class="widget-header">
-      <h3>Latest Activity</h3>
+      <h4>Recent Activity</h4>
     </div>
     <div class="widget-body">
-      <div id="holdings-chart" style="height: 260px;"></div>
+      {% if recent_activity %}
+        {% for activity in recent_activity %}
+          {% if activity.type == 5 %}  {# shares purchased #}
+            <div class="item-row">
+              <div class="item-label">
+                On <a href="#">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was purchased for ${{ activity.value|floatformat:2 }} each under <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
+              </div>
+            </div>
+          {% endif %}
+          {% if activity.type == 6 %}  {# shares sold #}
+            <div class="item-row">
+              <div class="item-label">
+                On <a href="#">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was sold for ${{ activity.value|floatformat:2 }} each from <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
+              </div>
+            </div>
+          {% endif %}
+          {% if activity.type == 0 %}  {# shares in #}
+            <div class="item-row">
+              <div class="item-label">
+                On <a href="#">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was added to <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
+              </div>
+            </div>
+          {% endif %}
+          {% if activity.type == 1 %}  {# shares out #}
+            <div class="item-row">
+              <div class="item-label">
+                On <a href="#">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was removed from <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
+              </div>
+            </div>
+          {% endif %}
+        {% endfor %}
+      {% endif %}
     </div>
   </div>
 
