cleanup for other widget layout after changes in last commit

--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -100,11 +100,11 @@
       <h4><i class="icon-info-sign"></i> Info</h4>
     </div>
     <div class="widget-body">
-      <div class="stats-row">
-        <div class="stats-label">
+      <div class="item-row">
+        <div class="item-label">
           <i class="icon-folder-open-alt"></i> Portfolios
         </div>
-        <div class="stats-value">
+        <div class="item-value">
           {{ portfolios|length }}
         </div>
       </div>
@@ -116,75 +116,75 @@
       <h4><i class="icon-globe"></i> World Markets</h4>
     </div>
     <div class="widget-body">
-      <div class="stats-row">
-        <div class="stats-label">
+      <div class="item-row">
+        <div class="item-label">
           Shanghai
         </div>
-        <div class="stats-value">
+        <div class="item-value">
           2,345.34 +32.12 (1.39%)
         </div>
       </div>
-      <div class="stats-row">
-        <div class="stats-label">
+      <div class="item-row">
+        <div class="item-label">
           Nikkei
         </div>
-        <div class="stats-value">
+        <div class="item-value">
           11,511.81 +257.84 (2.29%)
         </div>
       </div>
-      <div class="stats-row">
-        <div class="stats-label">
+      <div class="item-row">
+        <div class="item-label">
           Hang Seng Index
         </div>
-        <div class="stats-value">
+        <div class="item-value">
           22,854.79 +277.78 (1.23%)
         </div>
       </div>
-      <div class="stats-row">
-        <div class="stats-label">
+      <div class="item-row">
+        <div class="item-label">
           TSEC
         </div>
-        <div class="stats-value">
+        <div class="item-value">
           7,897.98 +17.08 (0.22%)
         </div>
       </div>
-      <div class="stats-row">
-        <div class="stats-label">
+      <div class="item-row">
+        <div class="item-label">
           FTSE 100
         </div>
-        <div class="stats-value">
+        <div class="item-value">
           6,325.88 +55.44 (0.88%)
         </div>
       </div>
-      <div class="stats-row">
-        <div class="stats-label">
+      <div class="item-row">
+        <div class="item-label">
           EURO STOXX 50
         </div>
-        <div class="stats-value">
+        <div class="item-value">
           2,611.89 +41.37 (1.61%)
         </div>
       </div>
-      <div class="stats-row">
-        <div class="stats-label">
+      <div class="item-row">
+        <div class="item-label">
           CAC 40
         </div>
-        <div class="stats-value">
+        <div class="item-value">
           3,691.49 +69.57 (1.92%)
         </div>
       </div>
-      <div class="stats-row">
-        <div class="stats-label">
+      <div class="item-row">
+        <div class="item-label">
           S&P TSX
         </div>
-        <div class="stats-value">
+        <div class="item-value">
           12,732.39 +71.95 (0.57%)
         </div>
       </div>
-      <div class="stats-row">
-        <div class="stats-label">
+      <div class="item-row">
+        <div class="item-label">
           S&P/ASX 200
         </div>
-        <div class="stats-value">
+        <div class="item-value">
           5,104.10 +67.50 (1.34%)
         </div>
       </div>
