--- a/templates/site/site_index.html
+++ b/templates/site/site_index.html
@@ -122,25 +122,25 @@
           {% if activity.type == 5 %}  {# shares purchased #}
             <div class="item-row">
               <div class="item-label">
-                On <a href="#">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was purchased for ${{ activity.value|floatformat:2 }} each under <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
+                On <a href="{% url 'activity_index' %}">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was purchased for ${{ activity.value|floatformat:2 }} each under <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
               </div>
             </div>
           {% elif activity.type == 6 %}  {# shares sold #}
             <div class="item-row">
               <div class="item-label">
-                On <a href="#">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was sold for ${{ activity.value|floatformat:2 }} each from <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
+                On <a href="{% url 'activity_index' %}">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was sold for ${{ activity.value|floatformat:2 }} each from <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
               </div>
             </div>
           {% elif activity.type == 0 %}  {# shares in #}
             <div class="item-row">
               <div class="item-label">
-                On <a href="#">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was added to <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
+                On <a href="{% url 'activity_index' %}">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was added to <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
               </div>
             </div>
           {% elif activity.type == 1 %}  {# shares out #}
             <div class="item-row">
               <div class="item-label">
-                On <a href="#">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was removed from <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
+                On <a href="{% url 'activity_index' %}">{{ activity.date_transacted|date:"F j, Y" }}</a>, {{ activity.quantity|floatformat:2 }} share{{ activity.quantity|pluralize }} of <a href="{% url 'markets_stocks_show' activity.stock_id %}">{{ activity.stock.name }} ({{ activity.stock.symbol }}:{{ activity.stock.market.acr }})</a> was removed from <a href="{% url 'portfolio_holdings_index' activity.portfolio_id %}">{{ activity.portfolio.name }}</a>
               </div>
             </div>
           {% endif %}
