--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -429,9 +429,7 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
   vertical-align: middle;
 }
 
-.table-options tbody td.row-options a:hover {
-  text-decoration: none;
-}
+.table-options tbody td.row-options a:hover { text-decoration: none; }
 
 .table-options .table-context-menu {
   display: none;
@@ -558,6 +556,17 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 .table tr td .large { font-size: 19px; }
 .table tr td .medium { font-size: 14px; font-weight: bold; }
 .table tr td .small { font-size: 12px; }
+
+
+/********************************/
+/* LIST PAGES
+/********************************/
+
+.list-search-bar {
+  padding-bottom: 15px;
+}
+
+
 
 
 /********************************/
@@ -697,7 +706,56 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
 /* TWITTER TYPEAHEAD (stocks)
 /********************************/
 
-.typeahead,
+.twitter-typeahead,
+.twitter-typeahead .tt-query,
+.twitter-typeahead .tt-hint {
+  margin-right: 15px;
+  width: 520px;
+  height: 34px;
+  line-height: 34px;
+  font-size: 17.5px;
+}
+
+.twitter-typeahead:focus { border: 1px solid #0097cf; }
+
+.twitter-typeahead .tt-query {
+  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+}
+
+.twitter-typeahead .tt-hint { color: #000444; }
+
+.twitter-typeahead .tt-dropdown-menu {
+  width: 532px;
+  margin-top: 15px;
+  padding: 8px 0;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 8px;
+     -moz-border-radius: 8px;
+          border-radius: 8px;
+  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
+          box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.twitter-typeahead .tt-suggestion {
+  padding: 3px 20px;
+  font-size: 18px;
+  line-height: 24px;
+}
+
+.twitter-typeahead .tt-suggestion.tt-is-under-cursor {
+  color: #fff;
+  background-color: #0097cf;
+}
+
+.twitter-typeahead .tt-suggestion p { margin: 0; }
+
+/*
+.twitter-typeahead,
 .tt-query,
 .tt-hint {
   width: 540px;
@@ -712,58 +770,12 @@ form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
   outline: none;
 }
 
-.typeahead {
-  background-color: #fff;
-}
 
-.typeahead:focus {
-  border: 2px solid #0097cf;
-}
 
-.tt-query {
-  -webkit-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-     -moz-box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-}
-
-.tt-hint {
-  width: 530px;
-  color: #999
-}
-
-.tt-dropdown-menu {
-  width: 540px;
-  margin-top: 12px;
-  padding: 8px 0;
-  background-color: #fff;
-  border: 1px solid #ccc;
-  border: 1px solid rgba(0, 0, 0, 0.2);
-  -webkit-border-radius: 8px;
-     -moz-border-radius: 8px;
-          border-radius: 8px;
-  -webkit-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-     -moz-box-shadow: 0 5px 10px rgba(0,0,0,.2);
-          box-shadow: 0 5px 10px rgba(0,0,0,.2);
-}
-
-.tt-suggestion {
-  padding: 3px 20px;
-  font-size: 18px;
-  line-height: 24px;
-}
-
-.tt-suggestion.tt-is-under-cursor {
-  color: #fff;
-  background-color: #0097cf;
-}
-
-.tt-suggestion p {
-  margin: 0;
-}
-
+*/
 
 /********************************/
-/* JQUERY-UI
+/* JQUERY-UI AUTOCOMPLETE
 /********************************/
 
 .ui-autocomplete-loading { background: url('../img/ui-anim_basic_16x16.gif') no-repeat 99% center }
