--- a/templates/base.html
+++ b/templates/base.html
@@ -24,12 +24,14 @@
   <link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}img/favicon.png">
 
   <!--[if lt IE 9]>
-  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
-  <script src="http://code.jquery.com/jquery-1.9.0.js" type="text/javascript"></script>
-  <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js" type="text/javascript"></script>
-  <script src="{{ STATIC_URL }}js/bootstrap.min.js" type="text/javascript"></script>
+  <!--<script src="http://code.jquery.com/jquery-1.9.0.js" type="text/javascript"></script>-->
+  <!--<script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js" type="text/javascript"></script>-->
+  <script src="{{ STATIC_URL }}js/jquery/jquery-1.10.1.min.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}js/jquery-ui/jquery-ui.min.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}js/bootstrap/bootstrap.min.js" type="text/javascript"></script>
 </head>
 <body>
 
