moved locally jquery-ui.css and fixed spastic layout issues with typeahead on stocks list page during javascript load

--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
   <meta name="viewport" content="initial-scale=1.0">
   <title>{% block browser_title %}Home{% endblock browser_title  %} - PortfolioApp</title>
 
-  <link href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
+  <link href="{{ STATIC_URL }}css/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
   <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
   <link href="{{ STATIC_URL }}css/styles.css" rel="stylesheet" type="text/css" media="screen">
   <link href="{{ STATIC_URL }}css/font-awesome.min.css" rel="stylesheet">
