--- a/templates/markets/stocks/index_paged_content.html
+++ b/templates/markets/stocks/index_paged_content.html
@@ -3,26 +3,30 @@
 <table class="table table-striped table-striped-white table-hover table-bordered table-condensed table-clickable">
   <thead>
     <tr>
-      <th style="width: 70%">Name</th>
-      <th style="width: 10%">Symbol</th>
-      <th style="width: 10%">Market</th>
-      <th style="width: 10%" class="align-right">Last Price</th>
+      <th style="width: 46%;">Name</th>
+      <th style="width: 8%;" class="align-right">Last Price</th>
+      <th style="width: 10%;" class="align-right">Shares Outstanding</th>
+      <th style="width: 10%;" class="align-right">Market Cap</th>
+      <th style="width: 8%;" class="align-right">PE</th>
+      <th style="width: 8%;" class="align-right">EPS</th>
     </tr>
   </thead>
   <tbody>
     {% paginate results_per_page stocks %}
     {% for stock in stocks %}
     <tr>
-      <td><a href="{% url 'markets_stocks_show' stock.id %}">{{ stock.name }}</a></td>
-      <td>{{ stock.symbol }}</td>
-      <td>{{ stock.market.acr }}</td>
+      <td><a href="{% url 'markets_stocks_show' stock.id %}">{{ stock.name }} ({{ stock.symbol }}:{{ stock.market.acr }})</a></td>
       <td class="align-right">${{ stock.last_price|floatformat:2 }}</td>
+      <td class="align-right">{{ stock.clean_outstanding_shares }}</td>
+      <td class="align-right">${{ stock.clean_market_cap }}</td>
+      <td class="align-right">{{ stock.pe|floatformat:2 }}</td>
+      <td class="align-right">{{ stock.eps|floatformat:2 }}</td>
     </tr>
     {% endfor %}
   </tbody>
   <tfoot>
     <tr class="footer">
-      <th colspan="4">
+      <th colspan="6">
         {% include "common/list_pagination.html" %}
       </th>
     </tr>
