added stock chart and key info widget to holding show page within a portfolio; use BNS/BB:TSX for examples

--- a/templates/portfolios/holdings/show.html
+++ b/templates/portfolios/holdings/show.html
@@ -21,37 +21,174 @@
     </div>
   </div>
 
+  <div id="stock-chart"></div>
+
 {% endblock content %}
 
 {% block sidebar %}
 
-  <div class="widget widget-simple">
+  <div class="widget widget-stats">
     <div class="widget-header">
-      <h3>Holding Snapshot</h3>
+      <h4><i class="icon-info-sign"></i> Holding Snapshot</h4>
     </div>
     <div class="widget-body">
-      <ul>
-        <li>Total Shares: 100.0000</li>
-        <li>Average Cost: $13.33</li>
-        <li>Book Value: $1000.22</li>
-        <li>Last Price: $14.32</li>
-        <li>Market Value: $14.32</li>
-      </ul>
+      <div class="item-row">
+        <div class="item-label">
+          Total Shares
+        </div>
+        <div class="item-value">
+          1000
+        </div>
+      </div>
+      <div class="item-row">
+        <div class="item-label">
+          Average Cost
+        </div>
+        <div class="item-value">
+          $13.33
+        </div>
+      </div>
+      <div class="item-row">
+        <div class="item-label">
+          Book Value
+        </div>
+        <div class="item-value">
+          $1000.22
+        </div>
+      </div>
+      <div class="item-row">
+        <div class="item-label">
+          Last Price
+        </div>
+        <div class="item-value">
+          $14.32
+        </div>
+      </div>
+      <div class="item-row">
+        <div class="item-label">
+          Market Value
+        </div>
+        <div class="item-value">
+          $1422.02
+        </div>
+      </div>
     </div>
   </div>
 
-<div class="widget widget-simple">
-  <div class="widget-header">
-    <h3>Key Statistics</h3>
+  <div class="widget widget-stats">
+    <div class="widget-header">
+      <h4><i class="icon-info-sign"></i> Key Statistics</h4>
+    </div>
+    <div class="widget-body">
+      <div class="item-row">
+        <div class="item-label">
+          Previous Close
+        </div>
+        <div class="item-value">
+          ${{ price_previous_day|floatformat:2 }}
+        </div>
+      </div>
+      <div class="item-row">
+        <div class="item-label">
+          52 Week Range
+        </div>
+        <div class="item-value">
+          ${{ price_52_week_low }} - ${{ price_52_week_high }}
+        </div>
+      </div>
+      <div class="item-row">
+        <div class="item-label">
+          1 Year Return
+        </div>
+        <div class="item-value">
+          {{ one_year_return_percent|intcomma }}%
+        </div>
+      </div>
+      <div class="item-row">
+        <div class="item-label">
+          Shares Outstanding
+        </div>
+        <div class="item-value">
+          {{ stock.clean_outstanding_shares|intcomma }}
+        </div>
+      </div>
+      <div class="item-row">
+        <div class="item-label">
+          Market Cap
+        </div>
+        <div class="item-value">
+          ${{ stock.clean_market_cap|intcomma }}
+        </div>
+      </div>
+      <div class="item-row">
+        <div class="item-label">
+          P/E
+        </div>
+        <div class="item-value">
+          {{ stock.pe|floatformat:2 }}
+        </div>
+      </div>
+      <div class="item-row">
+        <div class="item-label">
+          EPS
+        </div>
+        <div class="item-value">
+          {{ stock.eps|floatformat:2 }}
+        </div>
+      </div>
+
+    </div>
   </div>
-  <div class="widget-body">
-    <ul>
-      <li>Item 1: 10</li>
-      <li>Item 2: 20</li>
-      <li>Item 3: 30</li>
-      <li>Item 4: 40</li>
-    </ul>
-  </div>
-</div>
 
 {% endblock sidebar %}
+
+{% block script %}
+
+  <script type="text/javascript" src="{{ STATIC_URL }}js/highstock/highstock.js"></script>
+  <script type="text/javascript">
+
+      $(document).ready(function() {
+
+          $('#stock-chart').highcharts('StockChart', {
+              chart: {
+
+              },
+              credits: {
+                  enabled: false
+              },
+              scrollBar: {
+                  enabled: false
+              },
+              navigator: {
+                  enabled: false
+              },
+              rangeSelector: {
+                  selected: 4
+              },
+              xAxis: {
+                  ordinal: false
+              },
+              series: [{
+                  name: '{{ stock.symbol }}:{{ stock.market.acr }}',
+                  data: {{ stock_chart }},
+                  tooltip: {
+                      valueDecimals: 2
+                  },
+                  type: 'area',
+                  fillColor : {
+                      linearGradient : {
+                          x1: 0,
+                          y1: 0,
+                          x2: 0,
+                          y2: 1
+                      },
+                      stops : [[0, Highcharts.getOptions().colors[0]], [1, 'rgba(0,0,0,0)']]
+                  }
+              }]
+          });
+
+      });
+
+  </script>
+
+{% endblock script %}
